--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
   </head>
   <body>
-    <h1>Drawing Machine</h1>
-    <h3>Hit "D" to display image.</h3>
-    <h3>Hit "S" to save your drawing.</h3>
+    <h1>Comfort Zone</h1>
+    <h3>Click and drag to draw what you want in the dark</h3>
+    <h3>You can hit "S" to save your drawing.</h3>
+    <h3>Hit "C" to clear.</h3>
 
 
 </body></html>
