--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <h1>Comfort Zone</h1>
-    <h3>Click and drag to draw what you want in the dark</h3>
+    <h3>Draw what you want in the dark</h3>
     <h3>You can hit "S" to save your drawing.</h3>
     <h3>Hit "C" to clear.</h3>
-
+    <h3>When you draw, there will be curves coming from windows' corner.</h3>
+    <h3>The curves' appearance speed depend on your drawing speed.</h3>
 
 </body></html>
